# AI4K12

./: .gitignore  AGENTS.md  README.md  agent.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-api.cjs  test-coding-models.cjs  test-kimi-k2.5.cjs  test-models.cjs  test-siliconflow.cjs  tsconfig.json  vite.config.ts
.github/workflows/: pr-preview-release.yml  publish-packages.yml
apps/desktop/: index.html  package.json  vite.config.ts
docs/: product-requirements.md  project-structure.md  quickstart.md  roadmap.md  tech-architecture.md  testing-guide.md
docs/skills/: README.md  math-question-generator.md  ppt-generator.md  question-difficulty-adapter.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: chat.rs  export.rs  llm.rs  mod.rs  ppt.rs  question.rs  settings.rs
src-tauri/src/models/: chat.rs  mod.rs  question.rs  user.rs
src-tauri/src/services/: mod.rs
src-tauri/src/storage/: conversation.rs  mod.rs  settings.rs
src-tauri/src/utils/: error.rs  geometry.rs  latex.rs  mod.rs
src/components/chat/: ChatContainer.tsx  ChoiceCard.tsx  ExportButtons.tsx  GuidedPPTGenerator.tsx  GuidedQuestionGenerator.tsx  InputArea.tsx  MessageBubble.tsx  MessageList.tsx  WelcomeScreen.tsx
src/components/layout/: Header.tsx
src/components/settings/: AISettings.tsx  APISettings.tsx  TeacherOnboarding.tsx
src/services/: ai.ts  aiApi.ts  kimiApi.ts  questionApi.ts  teacherProfile.ts
src/stores/: app.ts  chat.ts
src/types/: index.ts  react-latex.d.ts
(+14 files in other folders)
