[package]
name = "ai4edu"
version = "0.1.0"
description = "AI4Edu - 高中数学智能教学助手"
authors = ["AI4Edu Team"]
edition = "2021"
rust-version = "1.75"

[dependencies]
# Tauri
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
diesel = { version = "2.1", optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
 codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.dev]
debug = true
opt-level = 1
